--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projekt1",
+  "name": "Inlamningsuppgift",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,14 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
-    "connect-mongo": "^4.6.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
-    "mongoose": "^6.2.3",
-    "passport": "^0.5.2",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.3"
   }
 }
